--- a/.env.example
+++ b/.env.example
@@ -11,7 +11,7 @@ DB_HOST=db_platform
 DB_PORT=3307
 DB_DATABASE=jobplatform
 DB_USERNAME=jobplatform_user
-DB_PASSWORD=rightway
+DB_PASSWORD=
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
